@@ -3,6 +3,7 @@ Changes for 4.0.3rc1
 New features:
 
 Bug fixes:
+A.F....... [ZBX-15124] fixed trigger overview behavior when show "any" (vasilijs)
 A......... [ZBX-14648] fixed performance with deletion of item in template linked to many hosts (Sasha)
 .......PS. [ZBX-9011] added new LLD macros for vmware HV low-level discovery (MVekslers)
 ..F....... [ZBX-15105] fixed colorpicker tooltip update (talbergs)
